# lessampler

./: .gitignore  .gitmodules  CMakeLists.txt  LESSAMPLER.jucer  README.CN.md  README.md  config.h.in  index.html
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml  sync.yml
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.cpp.REMOVED.git-id  BinaryData.h  JuceHeader.h
Resources/: SiHei.otf.REMOVED.git-id
Source/: BasicFile.h  Chooser.cpp  Chooser.h  Dialogs.cpp  Dialogs.h  F0Calculation.cpp  F0Calculation.h  FileExists.cpp  FileExists.h  InfoDialog.cpp  InfoDialog.h  LangPack.cpp  LangPack.h  Main.cpp  Main.h  MainComponent.cpp  MainComponent.h  OptionSetter.cpp  OptionSetter.h  WarningDialog.cpp  WarningDialog.h  WaveIO.cpp  WaveIO.h
Translations/: Readme.md  en_US.json
assets/: Readme.txt  lessampler.rc  lessampler.rc.in
demo/: README.md
docs/: README.md  index.html  note.md
lib/zlib/: CMakeLists.txt
shine/: shine.md
src/: CMakeLists.txt  GenerateAudioModel.cpp  GenerateAudioModel.h  StaticCast.h  lessampler.cpp  lessampler.h  main.cpp
src/AudioModel/: AudioModel.cpp  AudioModel.h  CMakeLists.txt  lessAudioModel.h  libWorldWrapper.cpp  libWorldWrapper.h
src/AudioModel/AudioProcess/: AduioProcess.cpp  AudioProcess.h
src/AudioModel/DSP/: Breath.cpp  Breath.h  CMakeLists.txt
src/AudioModel/Synthesis/: CMakeLists.txt  Synthesis.cpp  Synthesis.h
src/AudioModel/TimeStretch/: CMakeLists.txt  TimeStretch.h
src/AudioModel/World/: CMakeLists.txt  WorldModule.cpp  WorldPara.h
src/AudioModel/WorldModule/: WorldModule.cpp  WorldModule.h  WorldPara.h
src/AudioProcess/: AduioProcess.cpp  AudioProcess.cpp  AudioProcess.h  AutoAMP.cpp  AutoAMP.h  CMakeLists.txt  GenerateAudioModel.cpp
src/ConfigUnit/: CMakeLists.txt  ConfigFileIO.h  ConfigPathHelper.cpp  ConfigPathHelper.h  ConfigUnit.cpp  ConfigUnit.h  ConfigVoiceBank.cpp  ConfigVoiceBank.h  SHA1.cpp  SHA1.h  VoiceBankConfigure.cpp  VoiceBankConfigure.h  lessConfigure.cpp  lessConfigure.h
src/Dialogs/: CMakeLists.txt  Dialogs.cpp  Dialogs.h
src/FileIO/: AudioModelIO.cpp  AudioModelIO.h  BinUnit.cpp  BinUnit.h  BinWriteUnit.cpp  BinWriteUnit.h  CMakeLists.txt  FileBasic.cpp  FileBasic.h  FileDump.cpp  FileDump.h  FileReadUnit.cpp  FileReadUnit.h  FileWriteUnit.cpp  FileWriteUnit.h  GenAudioModelVid.cpp  GenAudioModelVid.h  GenerateAudioModel.cpp  GenerateAudioModel.h  JSONFileIO.cpp  JSONFileIO.h  WavIO.cpp  WavIO.h  ZlibStream.cpp  ZlibStream.h  lz4stream.h  lz4tream.h
src/LOG/: LOG.cpp  LOG.h
src/Shine/: CMakeLists.txt  Shine.cpp  Shine.h  ShinePara.h
src/Shine/Binding/: CMakeLists.txt
src/Shine/Binding/libUTAU/: CMakeLists.txt  FlagsDecoder.cpp  FlagsDecoder.h  PitchBendDecoder.cpp  PitchBendDecoder.h  ScaleConvert.cpp  ScaleConvert.h  UTAUParameterParser.cpp  UTAUParameterPaser.cpp  UTAUParameterPaser.h  libUTAU.cpp  libUTAU.h
src/TimeStretch/: TimeStretch.cpp  TimeStretch.h
src/Utils/: LOG.h  Timer.h  VectorWrapper.h  exception.h
src/libUTAU/: CMakeLists.txt  FlagsDecoder.cpp  FlagsDecoder.h  PitchBendDecoder.cpp  PitchBendDecoder.h  ScaleConvert.h  UTAUException.h  UTAUParameterPaser.cpp  UTAUParameterPaser.h  libUTAU.cpp  libUTAU.h
test/: .gitignore  AudioModelBinTest.cpp  AudioModelBinVersionTest.cpp  AudioProcessTest.cpp  CMakeLists.txt  ConfigUnitTest.cpp  GenerateAudioModelTest.cpp  LOGTest.cpp  PitchBendTest.cpp  ScaleConvertTest.cpp  TimerTest.cpp  VecbinTest.cpp  WorldAnalysisTest.cpp  libUTAUTest.cpp
tools/: CMakeLists.txt
tools/arg_parameter_export/: CMakeLists.txt  README.md  arg_parameter_export.cpp
